*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@13653 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,60 +4,60 @@
 	* GSWeb.framework/GSWGeometricRegion.h,.m:
 		o ivar names changes to conform to coding standards
 		o headers changed for gsdoc
-	* GSWAssociation.h:
+	* GSWeb.framework/GSWAssociation.h:
 		o ivar names changes to conform to coding standards
 		o headers changed for gsdoc
-	* GSWAssociation.m:
+	* GSWeb.framework/GSWAssociation.m:
 		o ivar names changes to conform to coding standards
 		o headers changed for gsdoc
 		o logs
-	* GSWForm.h,.m:
+	* GSWeb.framework/GSWForm.h,.m:
 		o ivar names changes to conform to coding standards
 		o headers changed for gsdoc
-	* GSWContext.h:
+	* GSWeb.framework/GSWContext.h:
 		o Changed return type of -elementID and -senderID
-	* GSWContext.m:
+	* GSWeb.framework/GSWContext.m:
 		o Changed return type of -elementID and -senderID
-	* GSWDisplayGroup.m:
+	* GSWeb.framework/GSWDisplayGroup.m:
 		o logs
 	* GSWeb.framework/GSWPopUpButton.h,.m:
 		o added count & index parameters (like GSWRepetition)
-	* GSWTextField.m:
+	* GSWeb.framework/GSWTextField.m:
 		o handling exception in takeValue
-	* GSWText.m:
+	* GSWeb.framework/GSWText.m:
 		o handling exception in takeValue
-	* GSWInput.m:
+	* GSWeb.framework/GSWInput.m:
 		o corrected bug in akeValuesFromRequest:inContext:
 	* GSWExtensionsGSW.framework:
 		o added GSWFileUploadComponent
 	* GSWExtensionsGSW.framework/GNUmakefile
 		o added GSWFileUploadComponent
-	* GSWComponent.h:
+	* GSWeb.framework/GSWComponent.h:
 		o added -definitionName
 		o ivar names changes to conform to coding standards
 		o headers changed for gsdoc		
-	* GSWComponent.m:
+	* GSWeb.framework/GSWComponent.m:
 		o added -definitionName
 		o added exception handling for debugging purpose
 		o ivar names changes to conform to coding standards
 		o headers changed for gsdoc		
-	* GSWKeyValueAssociation.m:
+	* GSWeb.framework/GSWKeyValueAssociation.m:
 		o logs
-	* GSWConstantValueAssociation.m:
+	* GSWeb.framework/GSWConstantValueAssociation.m:
 		o logs
-	* GSWApplication.h:
+	* GSWeb.framework/GSWApplication.h:
 		o added -saveResponsesPath
-	* GSWApplication.m:
+	* GSWeb.framework/GSWApplication.m:
 		o added -saveResponsesPath
 		o added GSWOPT_SaveResponsesPath
 		o added exception handling for debugging purpose
-	* GSWConstants.h/.m:
+	* GSWeb.framework/GSWConstants.h/.m:
 		o added GSWOPT_SaveResponsesPath
-	* GSWConfig.h:
+	* GSWeb.framework/GSWConfig.h:
 		o added GSWOPTVALUE_SaveResponsesPath
-	* GSWDefaultAdaptorThread.h:
+	* GSWeb.framework/GSWDefaultAdaptorThread.h:
 		o add response saving
-	* GSWDefaultAdaptorThread.m:
+	* GSWeb.framework/GSWDefaultAdaptorThread.m:
 		o add response saving
 	* GSWeb.framework/GSWResponse.m
 		o added -appendDebugCommentContentString:
