--- a/INSTALL
+++ b/INSTALL
@@ -62,6 +62,9 @@ At this point everything is done, still remains the Apache configuration:
 You have to export the following env var:
 export GNUSTEP_STRING_ENCODING=NSISOLatin1StringEncoding
 
+If you do not want the extensions you can compile with ADDITIONAL_OBJCFLAGS += -DNOEXTENSIONS
+in config.mak
+
 Configurating Apache:
 =====================
 
@@ -132,7 +135,7 @@ exemple values for a localhost use:
 }
 
 
-Now, develop an application and runnit !
+Now, develop an application and run it !
 
 We'll try to put a sample application soon.
 
