--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-15   Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb.framework/GSWElementIDString.m
+		o Applied David Ayers <d.ayers@inode.at> patch
+	* GSWAdaptors/Apache/GNUmakefile
+		o Applied David Ayers <d.ayers@inode.at> patch	
+
 2002-08-06   David Wetzel <dave@turbocat.de>
         * GSWeb.framework/GSWImageButton.m
                 o fixed a bug that caused the ImageButton to call the action even if it 
