a start to make statistics work
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@14861 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-28   David Wetzel <dave@turbocat.de>
+        * a start to make statistics work
+          Modified Files:
+          GSWApplication.m GSWComponentRequestHandler.m GSWSession.m
+          GSWStatisticsStore.h GSWStatisticsStore.m
+
 2002-10-12   Manuel Guesdon <mguesdon@orange-concept.com>
 	== See coments http://wiki.gnustep.org/index.php/GNUstepWeb ==
 	* GSWeb/GSWConstants.h/.m:
